// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHealth is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiHealth testClass1 testClass2 css-qn8ayk-euiHealth-s"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color #000000 is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="#000000"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color accent is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="accent"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color danger is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="danger"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color default is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="default"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color ghost is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="ghost"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color inherit is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="inherit"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color primary is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="primary"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color subdued is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="subdued"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color success is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color text is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="text"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props color warning is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="warning"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props textSize inherit is rendered 1`] = `
<div
  class="euiHealth css-1eqikqq-euiHealth-inherit"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props textSize m is rendered 1`] = `
<div
  class="euiHealth css-28ntf-euiHealth-m"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props textSize s is rendered 1`] = `
<div
  class="euiHealth css-qn8ayk-euiHealth-s"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`EuiHealth props textSize xs is rendered 1`] = `
<div
  class="euiHealth css-ft4ki3-euiHealth-xs"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-euiicon-type="dot"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;
